package Mealplan;

public class DailyMealPlan {
    private String data;
    private Recipe dinner;

    public DailyMealPlan(String data, Recipe meal) {
    }

    public void changeDate(String newDate) {

    }

}
