package Mealplan;

import java.util.HashMap;

public class IngredientList {


    HashMap<Ingredient,Float> ingredientAmount;

    public void addIngredient(Ingredient ingredient){

    }

    public void addAmount(float amount){

    }
}
