@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana

class Application
class Account
class IngredientList
class Ingredient
class User
class MealPlan
class DailyMealPlan
class Recipe
class GroceryList

Application *-- Account
Application *-- Recipe
Account *-- MealPlan
MealPlan *-- DailyMealPlan
DailyMealPlan *-- Recipe
Recipe *-- IngredientList
IngredientList *-- Ingredient
Account *-- GroceryList
Account *-- User

@enduml